55_K8S_Extended/04.Update/99-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-mt
  labels:
    name: nginx-mt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/mt"
        backend:
          service:
            name: nginx
            port: 
              name: "multitool"
